--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="contact.css">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Loubna — Portfolio</title>
@@ -29,6 +30,70 @@
     </nav>
   </div>
 </header>
+<section class="contact-section">
+  <h2>Contact Me</h2>
+
+  <form id="contactForm" novalidate>
+
+    <!-- First Name -->
+    <div class="form-group">
+      <label for="firstName">First Name *</label>
+      <input type="text" id="firstName" />
+      <small class="error-message"></small>
+    </div>
+
+    <!-- Last Name -->
+    <div class="form-group">
+      <label for="lastName">Last Name *</label>
+      <input type="text" id="lastName" />
+      <small class="error-message"></small>
+    </div>
+
+    <!-- Email -->
+    <div class="form-group">
+      <label for="email">Email *</label>
+      <input type="email" id="email" />
+      <small class="error-message"></small>
+    </div>
+
+    <!-- Phone (optional) -->
+    <div class="form-group">
+      <label for="phone">Phone (optional)</label>
+      <input type="tel" id="phone" />
+      <small class="error-message"></small>
+    </div>
+
+    <!-- Subject Dropdown -->
+    <div class="form-group">
+      <label for="subject">Subject *</label>
+      <select id="subject">
+        <option value="">-- Select a subject --</option>
+        <option value="General Question">General Question</option>
+        <option value="Project Inquiry">Project Inquiry</option>
+        <option value="Collaboration">Collaboration</option>
+      </select>
+      <small class="error-message"></small>
+    </div>
+
+    <!-- Message -->
+    <div class="form-group">
+      <label for="message">Message *</label>
+      <textarea id="message" rows="5"></textarea>
+      <div class="char-counter">0 / 20 characters</div>
+      <small class="error-message"></small>
+    </div>
+
+    <!-- Buttons -->
+    <div class="form-buttons">
+      <button type="submit" id="submitBtn">Submit</button>
+      <button type="reset" id="clearBtn">Clear</button>
+    </div>
+
+    <!-- Success Message -->
+    <p id="successMessage" class="success-message"></p>
+
+  </form>
+</section>
 
 
 <footer class="footer-content-section">
@@ -68,6 +133,7 @@
       <small class="footer-legal">© 2025 Loubna Othmani. All rights reserved.</small>
     </div>
   </footer>
+  <script src="contact.js"></script>
 </body>
 </html>
 
