--- a/projects.html
+++ b/projects.html
@@ -30,21 +30,27 @@
   </div>
 </header>
 
-<section class="projects-section"  aria-labelledby="projects-title">
-      <h2 id="projects-title" class="projects-title">Projects</h2>
+<section class="projects-section" aria-labelledby="projects-title">
+  <h2 id="projects-title" class="projects-title">Projects</h2>
 
-      <div class ="projects-item">
-          <img src="assets/temperatures-comparison.jpg" alt="Average Temparures Comparison" class="temperatures-img" />
-          <div class="project-caption"> 
-          <p>This graph compares historical averages (1722-1992, blue) with recent averages (1993-2022, magenta) to highlight climate trends in Sweden.</p>
-          </div>
-        </div>
+  <div class="filter-buttons">
+    <button class="filter-btn active" data-category="all">All Projects</button>
+    <button class="filter-btn" data-category="Web Development">Web Development</button>
+    <button class="filter-btn" data-category="Data Analysis">Data Analysis</button>
+    <button class="filter-btn" data-category="School Projects">School Projects</button>
+  </div>
 
-           <div class="projects-item">
-          <img src="assets/age-distribution-sweden.jpg" alt="Age distribution in Sweden" class="age-img" />
-          <div class="project-caption">
-            <p>This population pyramid compares Sweden's age distribution in 1923 and 2023.</p>
-      </div>
-    </div>
-  </section>
-</div>
+  <p id="projectCounter"></p>
+
+  <div id="projectsContainer" class="projects-container"></div>
+</section>
+
+<!-- Load your project data + script -->
+<script src="projects.js"></script>
+<script src="projects-script.js"></script>
+
+</body>
+</html>
+
+
+
