Create displayProjects function

--- a/projects.html
+++ b/projects.html
@@ -45,12 +45,9 @@
   <div id="projectsContainer" class="projects-container"></div>
 </section>
 
-<!-- Load your project data + script -->
+
 <script src="projects.js"></script>
-<script src="projects-script.js"></script>
+<script src="projectsDisplay.js"></script>
 
 </body>
 </html>
-
-
-
