--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Loubna — Portfolio</title>
   <meta name="description" content="Portfolio of Loubna, student in Economics with a strong interest in data." />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
 </head>
 <body>
  <header>
