Updated contact and projects file to match the js file location

--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,8 @@
 </section>
 
 
-<script src="projects.js"></script>
-<script src="projectsDisplay.js"></script>
+<script src="js/projects.js"></script>
+<script src="js/projectsDisplay.js"></script>
 
 </body>
 </html>
