--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
       <small class="footer-legal">© 2025 Loubna Othmani. All rights reserved.</small>
     </div>
   </footer>
-  <script src="contact.js"></script>
+  <script src="js/contact.js"></script>
 </body>
 </html>
 
